Notification history problem fixed